--- a/templates/meeting/index.html
+++ b/templates/meeting/index.html
@@ -10,7 +10,7 @@
     <ul>
       {% for event in events %}
         <li>
-          <a href="{% url 'meeting:event_show' event.id %}">
+          <a href="{% url 'meeting:show_event' event.id %}">
             {{ event.name }}
           </a>
         </li>
